--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -19,6 +22,7 @@ main {
   padding: 20px;
   margin: 0 20px;
   border: 1px solid #fff;
+  flex-grow: 1;
 }
 
 footer {
